@@ -2462,6 +2462,19 @@ test panedwindow-29.2 {resizing height} {
     -result {100 110}
 }
 
+test panedwindow-30.1 {display on depths other than the default one} {
+    -constraints {pseudocolor8 haveTruecolor24}
+    -body {
+	toplevel .t -visual {truecolor 24}
+	pack [panedwindow .t.p]
+	.t.p add [frame .t.p.f1] [frame .t.p.f2]
+	update
+	# If we got here, we didn't crash and that's good
+    }
+    -cleanup {destroy .t}
+    -result {}
+}
+
 # cleanup
 ::tcltest::cleanupTests
 return
